--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -91,7 +91,7 @@ Further instances of an electrical system replacing a mechanical one occurred in
 Electronic \textbf{control panels}, which contained switches and buttons, replaced the mechanical levers and removed the remaining physical effort needed to operate signalling systems. The combination of track circuits, electronic points and control panels enabled the introduction of \textbf{route setting} whereby at the press of a single button a configuration of signals and points could be selected thus enabling a train to travel down a particular route along the track.
 
 The next major advancement came some 50 years later and was enabled by the development of microprocessors. The relays and mechanical interlockings were replaced with \textbf{solid state interlockings} which were smaller still and more reliable than relay interlockings.
-These solid state interlockings are one of the systems verified in Chapter \ref{sec:executionofxsat}. Jump forward another 30 years to the current day and we are seeing the development and deployment of a new type of control system which makes use of recent technologies such as GPS and GMS radio  communications that enable signallers to have a far finer grain of control when compared with the discrete track circuits and do not need the physical coloured light signals to function. One such instance of a control system is the European Rail Traffic Management System which is discussed in more detail in Chapter \ref{chapter:ERTMS}
+These solid state interlockings are one of the systems verified in Chapter~\ref{sec:executionofxsat}. Jump forward another 30 years to the current day and we are seeing the development and deployment of a new type of control system which makes use of recent technologies such as GPS and GMS radio  communications that enable signallers to have a far finer grain of control when compared with the discrete track circuits and do not need the physical coloured light signals to function. One such instance of a control system is the European Rail Traffic Management System which is discussed in more detail in Chapter~\ref{chapter:ERTMS}
 \begin{comment}
 In the 1920s \textbf{colour light signals} replaced mechanical semaphore signals these where much brighter than the oil
 lamps fitted to semaphores and greatly increased the safety of night time
@@ -285,7 +285,7 @@ aspects used for a three light signal.
 \item[Green] -  The driver is clear to proceed down the track at full speed to the next signal as long as it is safe to do so. The track ahead is clear for a sufficient distance.
 \end{description}
 
-Other types of signal are normally used in more specific circumstances to control trains on certain types of track.  There are normally single aspect fixed red signals at the ends of tracks that provide permanent indicators not to proceed to approaching drivers. On a low speed segments of track a two aspect signal may be used if the braking distance (See chapter \ref{sec:lawsofmotion} for definition) of approaching trains is short. Whereas on high speed segments of track, where the  braking distances are long, four aspect signals may be used with two amber signals in order to provide information about the following two signals. This forms part of the standard signalling scheme in the UK; however, there are no international standards or consensus. Every country has its own particular signalling scheme with it's own conventions on the colour and number of signals used. 
+Other types of signal are normally used in more specific circumstances to control trains on certain types of track.  There are normally single aspect fixed red signals at the ends of tracks that provide permanent indicators not to proceed to approaching drivers. On a low speed segments of track a two aspect signal may be used if the braking distance (See Chapter~\ref{sec:lawsofmotion} for definition) of approaching trains is short. Whereas on high speed segments of track, where the  braking distances are long, four aspect signals may be used with two amber signals in order to provide information about the following two signals. This forms part of the standard signalling scheme in the UK; however, there are no international standards or consensus. Every country has its own particular signalling scheme with it's own conventions on the colour and number of signals used. 
 
 \begin{comment}
 The one aspect signal is typically a fixed red indicating that is not possible
