--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -17,11 +17,11 @@
 
 \thesischapter{Extracting a Conflict Driven Clause Learning SAT Algorithm}{Extracting a Conflict Driven Clause Learning SAT Algorithm} \label{chapter:cdclproof}
 \chaptermark{Extracting a CDCL SAT Algorithm}
-In the following chapter we shall describe how a conflict driven clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll}) in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transferred up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system has been modified so that it captures the behaviour  of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause in the original formula. The extracted program makes use of these clauses during the search for a satisfying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurrence of the empty clause in this set of clauses indicates that a conflict has a occurred and a clause is learned and passed up the branch of the proof search. In order to facilitate clause learning, the valuations used in this proof carry a modification: they store the rule and the level at which the literal has been added. This distinction between the literals added by the different rules allows one to analyse the cause of conflicts discovered during the proof search in more detail.
+In the following chapter we shall describe how a conflict driven clause learning SAT algorithm can be extracted from a modified DPLL proof system (See Chapter~\ref{chapter:dpll}) in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transferred up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system has been modified so that it captures the behaviour  of the conflict graph (See Chapter~\ref{chapter:satbackground}). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause in the original formula. The extracted program makes use of these clauses during the search for a satisfying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurrence of the empty clause in this set of clauses indicates that a conflict has a occurred and a clause is learned and passed up the branch of the proof search. In order to facilitate clause learning, the valuations used in this proof carry a modification: they store the rule and the level at which the literal has been added. This distinction between the literals added by the different rules allows one to analyse the cause of conflicts discovered during the proof search in more detail.
 
 
 \section{Preliminaries}
-The definitions of variables, literals, clauses, formulae and models remain the same as in chapter \ref{chapter:dpll}. In the following we shall present preliminary definitions that have subsequently been added or modified: \\
+The definitions of variables, literals, clauses, formulae and models remain the same as in Chapter~\ref{chapter:dpll}. In the following we shall present preliminary definitions that have subsequently been added or modified: \\
 %
 %\hspace{3mm}
 %
@@ -569,7 +569,7 @@ This is proven by using Lemma \ref{lem:compgen} to generate a complete set of cl
 \end{mycorollary}
 
 \section{Formalising Soundness and Completeness of the Modified DPLL and Unit Resolution Proof Systems in Minlog}
-We shall now describe how the soundness and completeness for the modified DPLL and  unit resolutions proof systems are formalised in the Minlog system. The formalisation is based on the Minlog formalisation for the DPLL proof system describe in Chapter \ref{chapter:dpllminlog}; the basic operations such as those on sets have been reused where possible. The inductive definition for the modified unit resolution proof system (See Code Listing \ref{def:moduresminlog}.) contains four closure axioms corresponding to the four rules in the proof system (See Definition \ref{def:modures} .). These axioms inductively define a predicate \texttt{unitRes} that captures a unit resolution derivation.
+We shall now describe how the soundness and completeness for the modified DPLL and  unit resolutions proof systems are formalised in the Minlog system. The formalisation is based on the Minlog formalisation for the DPLL proof system describe in Chapter~\ref{chapter:dpllminlog}; the basic operations such as those on sets have been reused where possible. The inductive definition for the modified unit resolution proof system (See Code Listing \ref{def:moduresminlog}.) contains four closure axioms corresponding to the four rules in the proof system (See Definition \ref{def:modures} .). These axioms inductively define a predicate \texttt{unitRes} that captures a unit resolution derivation.
 
 
 \begin{lstlisting}[caption = The Inductive Definition for the Modified Unit Resolution Proof System in Minlog, label = def:moduresminlog]
@@ -624,7 +624,7 @@ The inductive definition for the modified DPLL proof system inductively defines 
 )
 \end{lstlisting}
 
-The statement of completeness for the DPLL proof system has been modified from the one described in Theorem \ref{thm:moddpllcompleteness}. It additionally contains an assumption to allow for the inclusion of a more complicated branching heuristic (See lines 4-12 of Code Listing \ref{cl:moddpllcompleteness}.), which computes a variable ordering at the start of the program that is used throughout the proof search.  The assumption states that there exists a variable list \texttt{vs} that satisfies three properties in relation to the formula and the valuation during the proof search.  The first property (lines 5-7) states that every variable in the variable list which is not in the valuation must be contained in the variable set of the formula; we want to only select variables from the formula. The second property (lines 8-10) states that every variable in the formula but  not in the valuation must be in the variable list; our heuristic must compute an ordering containing every variable from the formula. The third property states that each variable has at most one occurrence in the list. The fourth property states that all of the literals in the valuation must be in the formula. It also contains assumptions regarding the structure of the formula and clauses. The assumptions  \texttt{WellFormed f} states that all clauses follow the structure described in Chapter \ref{sect:minlogprelim} and \texttt{funique} states that every clause in the formula is unique.
+The statement of completeness for the DPLL proof system has been modified from the one described in Theorem \ref{thm:moddpllcompleteness}. It additionally contains an assumption to allow for the inclusion of a more complicated branching heuristic (See lines 4-12 of Code Listing \ref{cl:moddpllcompleteness}.), which computes a variable ordering at the start of the program that is used throughout the proof search.  The assumption states that there exists a variable list \texttt{vs} that satisfies three properties in relation to the formula and the valuation during the proof search.  The first property (lines 5-7) states that every variable in the variable list which is not in the valuation must be contained in the variable set of the formula; we want to only select variables from the formula. The second property (lines 8-10) states that every variable in the formula but  not in the valuation must be in the variable list; our heuristic must compute an ordering containing every variable from the formula. The third property states that each variable has at most one occurrence in the list. The fourth property states that all of the literals in the valuation must be in the formula. It also contains assumptions regarding the structure of the formula and clauses. The assumptions  \texttt{WellFormed f} states that all clauses follow the structure described in Chapter~\ref{sect:minlogprelim} and \texttt{funique} states that every clause in the formula is unique.
 
 \begin{lstlisting}[caption = The Completeness Theorem for the Modified DPLL Proof System in Minlog, label = cl:moddpllcompleteness]
 (set-goal (pf "all val,f.  
