--- a/EVDP.tex
+++ b/EVDP.tex
@@ -1,7 +1,7 @@
 \thesischapter{Soundness and Completeness of The DPLL and Resolution Proof Systems}{Soundness and Completeness of DPLL and Resolution Proof Systems}
 \chaptermark{Soundness and Completeness of DPLL and Resolution}
  \label{chapter:dpll}
-In the following chapter we present a proof of soundness and completeness for the DPLL proof system (see Chapter \ref{chapter:satbackground}). The soundness proof guarantees the correctness of any extracted SAT algorithm based on the proof system while the completeness proof contains the computational content needed to extract a program. The completeness proof is performed in such a way as to take into account efficiency considerations. The branching rule $\Split$ is only applied when absolutely necessary as it is computationally the most expensive to perform. A Minlog formalisation of these proofs and an analysis of the performance of the extracted program is presented in Chapter \ref{chapter:dpllminlog}. Following this we present a proof of the soundness and completeness of the resolution proof system based on the completeness proof of the DPLL proof system. Then both the DPLL and the resolution proof systems are enriched to contain quantitative information about the size of the proof enabling us to prove that the resolution proofs are in the same order of size as the DPLL proofs. The completeness proof was presented in \cite{AL12} and an improved version in \cite{AL14b}.
+In the following chapter we present a proof of soundness and completeness for the DPLL proof system (See Chapter~\ref{chapter:satbackground}). The soundness proof guarantees the correctness of any extracted SAT algorithm based on the proof system while the completeness proof contains the computational content needed to extract a program. The completeness proof is performed in such a way as to take into account efficiency considerations. The branching rule $\Split$ is only applied when absolutely necessary as it is computationally the most expensive to perform. A Minlog formalisation of these proofs and an analysis of the performance of the extracted program is presented in Chapter~\ref{chapter:dpllminlog}. Following this we present a proof of the soundness and completeness of the resolution proof system based on the completeness proof of the DPLL proof system. Then both the DPLL and the resolution proof systems are enriched to contain quantitative information about the size of the proof enabling us to prove that the resolution proofs are in the same order of size as the DPLL proofs. The completeness proof was presented in \cite{AL12} and an improved version in \cite{AL14b}.
 
 \section{Related Work}
 %Other examples of verification and extraction of SAT solvers
@@ -20,7 +20,7 @@ The approaches \cite{SL08,FM10} to formalising a DPLL SAT-solver in
 both Coq and Isabelle
 involve explicitly stating the algorithm to be verified. In contrast, we
 prove a theorem that just states that each formula in CNF is either unsatisfiable
-or has a model, and synthesize the program from the proof.
+or has a model, and synthesize the program from the proof (See Theorem~\ref{thm:dpllcompleteness}).
 In the long run we would like to integrate automatic verification techniques into Minlog. Extracting a SAT-solver in Minlog is one step towards our end goal.
 
 \section{Reformulation of the DPLL Proof System}
@@ -534,7 +534,7 @@ to form a resolution solver that yields resolution refutations for unsatisfiable
 Since the computationally hard and interesting part of this program is 
 entirely contained in the DPLL-based SAT solver, we will restrict
 our attention to the latter when we discuss the extracted programs in detail 
-in Sect.~\ref{chapter:dpllprogram}.
+in Section~\ref{chapter:dpllprogram}.
 
 
 
